test for the auth
