# swagger.json
@@ -23,6 +23,19 @@
         }
       }
     },
+    "/auth/github/callback": {
+      "get": {
+        "description": "",
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/events/": {
       "get": {
         "tags": [
